# lwrb

./: .clang-format  .clang-format.orig  .clang-tidy  .gitignore  .gitmodules  .readthedocs.yaml  AUTHORS  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  library.json
dev/: main.c
dev/VisualStudio/: lwrb_dev.vcxproj  lwrb_dev.vcxproj.filters  main.c  ringbuff_dev.sln  ringbuff_dev.vcxproj  ringbuff_dev.vcxproj.filters
docs/: buff_empty.xml  buff_lin_skip.xml  conf.py  doxy_ringbuff.doxy  doxyfile.doxy  index.rst  license.txt  requirements.txt
docs/api/: ringbuff.rst
docs/api-reference/: index.rst  ringbuff.rst
docs/authors/: index.rst
docs/changelog/: index.rst
docs/examples/: buff_block_read.c  example_basic.c  example_dma_pseudo.c  example_dma_skip.c  example_index.c  tip_trick_buff_size.c  tip_trick_buff_size_res.c
docs/examples_src/: example_advance_1.c  example_dma_skip.c  example_events.c  example_index.c  example_minimal.c  example_skip_1.c  example_skip_2.c  example_thread_safety.c  example_tt_buff_size.c
docs/get-started/: index.rst
docs/images/: logo.drawio
docs/sphinx/: conf.py  index.rst
docs/src/: _application_note.h  _examples.h  _mainpage.h  _tips_tricks.h
docs/static/css/: common.css
docs/tips-tricks/: index.rst
docs/user-manual/: events.rst  how-it-works.rst  hw-dma-usage.rst  index.rst  thread-safety.rst
lwrb/: CMakeLists.txt  library.cmake
lwrb/src/include/lwrb/: lwrb.h
lwrb/src/lwrb/: lwrb.c  lwrb_ex.c
lwrb/test/: README.md  test.c  test_ex.c
ringbuff/src/include/ringbuff/: ringbuff.h
ringbuff/src/ringbuff/: ringbuff.c
src/include/ringbuff/: ringbuff.h
src/ringbuff/: ringbuff.c
